--- a/DoradSmartphone/Views/DashboardPage.xaml
+++ b/DoradSmartphone/Views/DashboardPage.xaml
@@ -3,26 +3,22 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="DoradSmartphone.Views.DashboardPage"
              xmlns:model="clr-namespace:DoradSmartphone.Models"
-             xmlns:viewmodel="clr-namespace:DoradSmartphone.ViewModels"   
-             x:DataType ="viewmodel:DashboardViewModel"
+             xmlns:viewmodel="clr-namespace:DoradSmartphone.ViewModels"
+             x:DataType="viewmodel:DashboardViewModel"
              Title="{Binding Title}">
     <StackLayout>
-        <Label x:Name="StatusLabel" Text="{Binding CommStatus}"  IsVisible="{Binding StatusLabel}"/>
+        <Label x:Name="StatusLabel" Text="{Binding CommStatus}" IsVisible="{Binding StatusLabel}" />
         <ListView x:Name="DeviceListView"
                   ItemsSource="{Binding Devices}"
                   IsVisible="{Binding DeviceBool}">
             <ListView.ItemTemplate>
                 <DataTemplate x:DataType="model:DeviceCandidate">
                     <Frame HeightRequest="90" Margin="5">
-                        <Frame.GestureRecognizers>
-                            <TapGestureRecognizer Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:DashboardViewModel}}, Path=PairingCommand}"
-                                                  CommandParameter="{Binding .}"></TapGestureRecognizer>
-                        </Frame.GestureRecognizers>
-                                <VerticalStackLayout Padding="5" Spacing="4">
-                                    <Label Text="{Binding Name}" FontAttributes="Bold" />
-                                    <Label Text="{Binding Address}" FontSize="Small" />
-                                    <Label Text="{Binding Id}" FontSize="Small" />
-                                </VerticalStackLayout>
+                        <StackLayout Padding="5" Spacing="4">
+                            <Label Text="{Binding Name}" FontAttributes="Bold" />
+                            <Label Text="{Binding Address}" FontSize="Small" />
+                            <Label Text="{Binding Id}" FontSize="Small" />
+                        </StackLayout>
                     </Frame>
                 </DataTemplate>
             </ListView.ItemTemplate>
