--- a/DoradSmartphone/Views/StartRunPage.xaml
+++ b/DoradSmartphone/Views/StartRunPage.xaml
@@ -37,8 +37,7 @@
                                     <Label Text="{Binding Time}" />
                                     <Label Text="{Binding Speed.Avg, StringFormat='Average Speed: {0}'}" />
                                     <Label Text="{Binding Speed.Max, StringFormat='Maximum Speed: {0}'}" />
-                                    <Label Text="{Binding Route[0].Latitude, StringFormat='Address: {0}'}" />
-                                    <Label Text="{Binding Route[0].Longitude}" />
+                                    <Label Text="{Binding Route[0].Address, StringFormat='Address: {0}'}" />
                                 </StackLayout>
                             </Frame>
                         </DataTemplate>
