Change the methods that calculate the positions of the widget in a static class, to be availible for the Manual and Automatic ones

--- a/DoradSmartphone/AppShell.xaml
+++ b/DoradSmartphone/AppShell.xaml
@@ -42,7 +42,7 @@
         <Tab Title="Widgets" Icon="{x:Static helpers:Icons.Dashboard}">
             <ShellContent
                 Title="Widgets"
-                ContentTemplate="{DataTemplate views:WidgetPage}"
+                ContentTemplate="{DataTemplate views:DashboardPage}"
                 Route="WidgetsPage"/>
         </Tab>
 
