--- a/DoradSmartphone/Views/ExercisePage.xaml
+++ b/DoradSmartphone/Views/ExercisePage.xaml
@@ -32,9 +32,9 @@
                 </MapSpan>
             </x:Arguments>
         </maps:Map>
-        <RefreshView IsRefreshing="{Binding IsRefreshing}" Command="{Binding RefreshCommand}">
+        <RefreshView IsRefreshing="{Binding IsRefreshing}" Command="{Binding RefreshCommand}" Grid.Row="1">
             <RefreshView.Content>
-                <CarouselView ItemsSource="{Binding Exercises}" Grid.Row="1" PeekAreaInsets="200">
+                <CarouselView ItemsSource="{Binding Exercises}"  PeekAreaInsets="200">
                     <CarouselView.ItemTemplate>
                         <DataTemplate x:DataType="model:Exercise">
                             <Frame HeightRequest="150" Margin="5">
@@ -45,7 +45,8 @@
                                     <Label Text="{Binding StartingDate, StringFormat='Starting Date: {0:dd/MM/yyyy HH:mm}'}" />
                                     <Label Text="{Binding Time, StringFormat='Time: {0} '}" />
                                     <Label Text="{Binding Speed.Avg, StringFormat='Avg Speed: {0}'}" />
-                                    <Label Text="{Binding Route[0].Address, StringFormat='Address: {0}'}" />
+                                    <Label Text="{Binding StartingAddress, StringFormat='Starting Address: {0}'}" />
+                                    <Label Text="{Binding FinishingAddress, StringFormat='Finishing Address: {0}'}" />
                                 </StackLayout>
                             </Frame>
                         </DataTemplate>
